📦 NEW: view_closet 필터 추가

--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -31,143 +31,33 @@
                 <div class="col-lg-6">
                 </div>
                 <div class="col-lg-6 text-start text-lg-end wow slideInRight" data-wow-delay="0.1s">
-                    <ul class="nav nav-pills d-inline-flex justify-content-end mb-5">
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-1">상의</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-1" class="dropdown-item">니트/스웨터</a>
-                                    <a href="#tab-1" class="dropdown-item">셔츠/블라우스</a>
-                                    <a href="#tab-1" class="dropdown-item">후드 티셔츠</a>
-                                    <a href="#tab-1" class="dropdown-item">피케/카라 티셔츠</a>
-                                    <a href="#tab-1" class="dropdown-item">맨투맨/스웨트셔츠</a>
-                                    <a href="#tab-1" class="dropdown-item">반소매 티셔츠</a>
-                                    <a href="#tab-1" class="dropdown-item">긴소매 티셔츠</a>
-                                    <a href="#tab-1" class="dropdown-item">민소매 티셔츠</a>
-                                    <a href="#tab-1" class="dropdown-item">기타 상의</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-2">하의</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-2" class="dropdown-item">데님 팬츠</a>
-                                    <a href="#tab-2" class="dropdown-item">숏 팬츠</a>
-                                    <a href="#tab-2" class="dropdown-item">코튼 팬츠</a>
-                                    <a href="#tab-2" class="dropdown-item">레깅스</a>
-                                    <a href="#tab-2" class="dropdown-item">슈트 팬츠/슬랙스</a>
-                                    <a href="#tab-2" class="dropdown-item">점프 슈트/오버올</a>
-                                    <a href="#tab-2" class="dropdown-item">트레이닝/조거 팬츠</a>
-                                    <a href="#tab-2" class="dropdown-item">기타 바지</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-0">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-3">치마</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-3" class="dropdown-item">미니 스커트</a>
-                                    <a href="#tab-3" class="dropdown-item">미디 스커트</a>
-                                    <a href="#tab-3" class="dropdown-item">롱 스커트</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-4">원피스</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-4" class="dropdown-item">미니 원피스</a>
-                                    <a href="#tab-4" class="dropdown-item">미디 원피스</a>
-                                    <a href="#tab-4" class="dropdown-item">맥시 원피스</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-5">아우터</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-5" class="dropdown-item">후드 집업</a>
-                                    <a href="#tab-5" class="dropdown-item">환절기 코트</a>
-                                    <a href="#tab-5" class="dropdown-item">블루종/MA-1</a>
-                                    <a href="#tab-5" class="dropdown-item">겨울 코트</a>
-                                    <a href="#tab-5" class="dropdown-item">레더/라이더스 재킷</a>
-                                    <a href="#tab-5" class="dropdown-item">롱패딩/롱헤비 아우터</a>
-                                    <a href="#tab-5" class="dropdown-item">슈트/블레이저 재킷</a>
-                                    <a href="#tab-5" class="dropdown-item">숏패딩/숏헤비 아우터</a>
-                                    <a href="#tab-5" class="dropdown-item">카디건</a>
-                                    <a href="#tab-5" class="dropdown-item">아노락 재킷</a>
-                                    <a href="#tab-5" class="dropdown-item">패딩 베스트</a>
-                                    <a href="#tab-5" class="dropdown-item">플리스/뽀글이</a>
-                                    <a href="#tab-5" class="dropdown-item">트레이닝 재킷</a>
-                                    <a href="#tab-5" class="dropdown-item">기타 아우터</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-1">가방</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-1" class="dropdown-item">백팩</a>
-                                    <a href="#tab-1" class="dropdown-item">메신저/크로스 백</a>
-                                    <a href="#tab-1" class="dropdown-item">파우치 백</a>
-                                    <a href="#tab-1" class="dropdown-item">숄더백</a>
-                                    <a href="#tab-1" class="dropdown-item">에코백</a>
-                                    <a href="#tab-1" class="dropdown-item">토트백</a>
-                                    <a href="#tab-1" class="dropdown-item">클로치 백</a>
-                                    <a href="#tab-1" class="dropdown-item">웨이스트백/힙색</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-1">악세서리</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="#tab-1" class="dropdown-item">모자</a>
-                                    <a href="#tab-1" class="dropdown-item">레그웨어</a>
-                                    <a href="#tab-1" class="dropdown-item">머플러</a>
-                                    <a href="#tab-1" class="dropdown-item">장갑</a>
-                                    <a href="#tab-1" class="dropdown-item">시계</a>
-                                    <a href="#tab-1" class="dropdown-item">팔찌</a>
-                                    <a href="#tab-1" class="dropdown-item">귀걸이</a>
-                                    <a href="#tab-1" class="dropdown-item">반지</a>
-                                    <a href="#tab-1" class="dropdown-item">발찌</a>
-                                    <a href="#tab-1" class="dropdown-item">목걸이</a>
-                                    <a href="#tab-1" class="dropdown-item">헤어 액세서리</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item me-2">
-                            <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-1">신발</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle text-body" data-bs-toggle="dropdown"></a>
-                                <div class="dropdown-menu m-0">
-                                    <ul>
-                                        <li>
-                                            <label for='shoes1'><span>구두</span></label>
-                                            <input type="checkbox" id="shoes1" class=""></input>
-                                        </li>
-
-                                    </ul>
-                                    <a href="#tab-1" class="dropdown-item">구두</a>
-                                    <a href="#tab-1" class="dropdown-item">샌들</a>
-                                    <a href="#tab-1" class="dropdown-item">로퍼</a>
-                                    <a href="#tab-1" class="dropdown-item">힐/펌프스</a>
-                                    <a href="#tab-1" class="dropdown-item">플랫 슈즈</a>
-                                    <a href="#tab-1" class="dropdown-item">부츠</a>
-                                    <a href="#tab-1" class="dropdown-item">캔버스/단화</a>
-                                    <a href="#tab-1" class="dropdown-item">스포츠 스니커즈</a>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="option_container">
+                        <div class="type1_box">
+                            <ul class="ms-unselected"><span></span></ul>
+                                <select id="type1" width="100%" size="5">
+                                    <option value="" disabled>== 분류 1 ==</option>
+                                    <option>상의</option>
+                                    <option>하의</option>
+                                    <option>치마</option>
+                                    <option>원피스</option>
+                                    <option>아우터</option>
+                                    <option>가방</option>
+                                    <option>악세서리</option>
+                                    <option>신발</option>
+                                </select>
+                        </div>
+                        <div class="type2_box" multiple="multiple">
+                            <select id="type2" multiple size="5">
+                                <option value="" disabled>== 분류 2 ==</option>
+                            </select>
+                                
+                        </div>
+                        <div class="selected_box">
+                            <select id="selected" size="5">
+                                <option value="" disabled>== 선택된 필터 ==</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -251,4 +141,5 @@
 {% endblock content %}
 
 {% block jsv %}
+<script defer src="{% static 'js/view_closet.js' %}"></script>
 {% endblock jsv %}
