--- a/static/css/view.css
+++ b/static/css/view.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    overflow: auto;
+    overflow: hidden;
     flex-wrap: nowrap;
     align-items: stretch;
 }
@@ -19,5 +19,6 @@
 
 .searchFilter{
     width: 100px;
-    margin: 10px 0px;
+    margin: 10px 10px;
+    height: 150px;
 }
