--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -113,7 +113,7 @@
 
                                 <!-- button design -->
                                 <div class="btn-container" name="btn-container">
-                                    <button id="btn-submit" class="btn-submit" type="sumbit" onkeyup="if(window.event.keyCode==13){}">
+                                    <button id="btn-submit" class="btn-submit" type="sumbit">
                                         <p class="jamsil" id="btnText" style="padding-top: 15px;">저장</p>
                                         <div class="check-box">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
