--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -113,7 +113,7 @@
 
                                 <!-- button design -->
                                 <div class="btn-container" name="btn-container">
-                                    <button id="btn-submit" class="btn-submit" type="sumbit">
+                                    <button id="btn-submit" class="btn-submit">
                                         <p class="jamsil" id="btnText" style="padding-top: 15px;">저장</p>
                                         <div class="check-box">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
@@ -171,7 +171,8 @@
             note: 'Images only, Up to 10 files',
             produlyDisplayPoweredByUppy:false,
             autoOpenFileEditor: false,
-            //hideUploadButton : true,
+            hideUploadButton : true,
+            hideProgressAfterFinish : true,
         })
 
         .use(Uppy.Form, { 
@@ -197,7 +198,9 @@
             allowedMetaFields:true,
         })
 
-        .use(Uppy.ImageEditor, { target: Uppy.Dashboard })    
+        .use(Uppy.ImageEditor, { target: Uppy.Dashboard })
+        
+            
 
 
 
@@ -225,6 +228,22 @@
             }
         });
         
+        document.getElementById('btn-submit').addEventListener('click', () => {
+            uppy.upload();
+            document.getElementById('btn-submit').hidden=true;
+        });
+
+        var my_form = document.getElementById("clothesInfo"), button = document.getElementById("btn-submit");
+        my_form.onsubmit = function() {
+        return false;
+        }
+
+        button.onclick = function() {
+        setTimeout(function() {
+        my_form.submit();
+        }, 1500);
+        return false;
+        }
         {% comment %} uppy.on('complete', result => {
             console.log('successful files:', result.successful)
             console.log('failed files:', result.failed)
