--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="btn-container" name="btn-container">
                 <button class="btn-submit" type="button" onclick = "location.href = '{% url 'uploadCloset' user.first_name %}' " onkeyup="if(window.event.keyCode==13){}">
-                    <p id="btnText">Upload</p>
+                    <p id="btnText" class="jamsil" style="padding-top: 15px;" >Upload</p>
                 </button>
             </div>
             <br>
