정보수정 유효성 검사 및 웹캠 띄우기

--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -33,7 +33,7 @@
             <div class="col text-start text-lg-end wow fadeInUp" data-wow-delay="0.1s">
                 <a class="btn btn-lg btn-outline-primary border-2 jamsil" href="{% url 'view_closet' user.first_name %}">목록</a>
             </div>
-            <div class="row g-0 gx-5 align-items-end">
+            <div class="row g-0 gx-5 align-items-end pt-3">
                 <div class="col-lg-6">
                     <div class="section-header text-start mb-5 wow fadeInUp"
                          data-wow-delay="0.1s"
