--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -105,6 +105,7 @@
                                     <label for="details" class="col-sm-2 col-form-label text-end fw-bold" >상세정보</label>
                                     <textarea name="details" id="details" class="form-control col details" rows="5" placeholder="생략 가능"></textarea>
                                 </div>
+                                <input id="groupID" type="text"></input>
                                 <!-- Uppy Dashboard -->
                                 <div class="mb-3 row">
                                     <label class="col-sm-2"></label>
@@ -153,7 +154,8 @@
                                     type2: type2,
                                     tag: tag,
                                     name: clothesName,
-                                    details: details
+                                    details: details,
+                                    groupID: groupID,
                                 },
                                 locale : Uppy.locales.ko_KR,
     })
